@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam classFontStyle bold

package "Bibliotheekbeheersysteem" {

    enum Genres {
        Actie
        Avontuur
        Biografie
        Kinder
        Klassieke_fictie
        Misdaad
        Mysterie
        Fantasie
        Horror
        Humor
        Wetenschap
    }

    class Book {
        -title: string
        -author: string
        -language: string
        -isbn: string
        -genre: Genres
        -pages: int
        -target_group: string
        -summary: string
        --
        +Title: string <<property>>
        +Author: string <<property>>
        +Language: string <<property>>
        +ISBN: string <<property>>
        +Genre: string <<property>> <<set>>
        +Genres: List<Genres> <<get>>
        +Pages: int <<property>>
        +Target_Group: string <<property>>
        +Summary: string <<property>>
        --
        +Book(library: Library, title: string, author: string)
        +Overview(): void
        -IsValidISBN(isbn: string): bool
    }

    abstract class ReadingRoomItem {
        -title: string
        -publisher: string
        -date: DateTime
        --
        +Title: string <<get>>
        +Publisher: string <<get>>
        +Date: DateTime <<get>>
        +Identification: string <<abstract get>>
        +Categorie: string <<abstract get>>
        --
        +ReadingRoomItem(title: string, publisher: string, date: DateTime)
        +Equals(obj: object): bool <<override>>
        +GetHashCode(): int <<override>>
    }

    class NewsPaper {
        +Identification: string <<override get>>
        +Categorie: string <<override get>> = "Krant"
        --
        +NewsPaper(title: string, publisher: string, date: DateTime)
    }

    class Magazine {
        +Identification: string <<override get>>
        +Categorie: string <<override get>> = "MaandBlad"
        --
        +Magazine(title: string, publisher: string, date: DateTime)
    }

    class Library {
        -nameLibary: string
        -books: List<Book>
        -allReadingRoom: Dictionary<DateTime, ReadingRoomItem>
        --
        +NameLibary: string <<private set>>
        +Books: List<Book> <<get>>
        +AllReadingRoom: Dictionary<DateTime, ReadingRoomItem> <<get>>
        --
        +Library(name: string)
        +AddBook(book: Book): void <<internal>>
        +DeleteBook(): void <<internal>>
        +FindBookAuthAndTitle(): void <<internal>>
        +FindBookWithISBN(): void <<internal>>
        +FindBookFromAuth(): void <<internal>>
        +FindBooksByPages(): void <<internal>>
        +CsvFileReader(): void <<internal>>
        +AddNewaPaper(item: ReadingRoomItem): void <<internal>>
        +AddMagazine(item: ReadingRoomItem): void <<internal>>
        +ShowAllNewsPapers(): void <<internal>>
        +ShowAllMagazine(): void <<internal>>
        +AcquisitionsReadingRoomToday(): void <<internal>>
        --
        -IsValidISBN(isbn: string): bool <<private>>
        +GetCsvPath(fileName: string): string <<static>>
        -FindProjectRoot(): string <<private static>>
    }

    class Program {
        -boekMenu: bool
        -infoMenu: bool
        -deleteMenu: bool
        --
        +Main(args: string[]): void <<static>>
        +keuzeMenu(): void <<static>>
    }
}

' Relaties
Book "1" --> "0..*" Library : wordt beheerd door
Library o--> "0..*" Book : bevat
Library o--> "0..*" ReadingRoomItem : bevat (in leeszaal)
ReadingRoomItem <|-- NewsPaper
ReadingRoomItem <|-- Magazine
Book --> Genres : gebruikt

' Constructor link
Book::Book --> Library::AddBook : roept aan

@enduml